# teleshell

./: .env.example  .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  PRE-SPEC.md  README.md  SPEC.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
src/teleshell/: config.py  main.py  summarizer.py  telegram_client.py
tests/integration/: test_summarize_flow.py
tests/unit/: test_channels_cli.py  test_channels_manage.py  test_cli.py  test_config.py  test_summarizer.py  test_telegram.py  test_tui_logic.py
